# patches-src

./: .gitignore  E71_45.ld  Makefile  README.md  alpha_selector.asm  build.sh  csm_exc.c  drawhook.ewp  drawhook.h  patch.c  readme.txt
activate_dyn_light/: CMakeLists.txt  E71_45.h  E71_45.ld  patch.S  patch.c
add_icons_to_header_in_nm/: C72_22.h  C72_22.ld  C75_24.h  C75_24.ld  C81_51.h  C81_51.ld  CF75_23.h  CF75_23.ld  CMakeLists.txt  CX70_56.h  CX70_56.ld  E71_45.h  E71_45.ld  EL71_45.h  EL71_45.ld  ELKA.h  NSG.h  S65_58.h  S65_58.ld  S75_52.h  S75_52.ld  patch.S  patch.c
add_ims_700_icon_to_iconbar/: CMakeLists.txt  S75_52.h  S75_52.ld  patch.S  patch.c
add_vibration_as_a_key_tone_option/: CMakeLists.txt  E71_45.h  E71_45.ld  patch.S  patch.c
battery_percentage_instead_of_icons/: C72_22.h  C72_22.ld  C75_24.h  C75_24.ld  CF75_23.h  CF75_23.ld  CMakeLists.txt  CX70_56.h  CX70_56.ld  E71_45.h  E71_45.ld  S65_58.h  S65_58.ld  S75_52.h  S75_52.ld  patch.S  patch.c
calls_list_modification/: CMakeLists.txt  E71_45.h  E71_45.ld  calls_list.h  patch.S  patch.c  types.h
camera_modification/: CMakeLists.txt  E71_45.h  E71_45.ld  camera.h  data.h  patch.S  patch.c
change_network_search_text/: CMakeLists.txt  E71_45.h  E71_45.ld  S65_58.h  S65_58.ld  patch.S  patch.c  toolchain.cmake
cpu_frequency_control_on_keypress/: CMakeLists.txt  E71_45.h  E71_45.ld  data.h  patch.S  patch.c
date_instead_of_provider_name_in_screensaver/: C72_22.h  C72_22.ld  C75_24.h  C75_24.ld  CMakeLists.txt  CX70_56.h  CX70_56.ld  E71_45.h  E71_45.ld  S65_58.h  S65_58.ld  S75_52.h  S75_52.ld  patch.S  patch.c
disable_network/: C72_22.h  C72_22.ld  C75_24.h  C75_24.ld  CF75_23.h  CF75_23.ld  CMakeLists.txt  CX70_56.h  CX70_56.ld  S65_58.h  S65_58.ld  patch.S  patch.c
display_a_message_instead_of_starting_a_java_application_if_java_is_disabled/: C72_22.h  C72_22.ld  C75_24.h  C75_24.ld  CF75_23.h  CMakeLists.txt  CX70_56.h  patch.S  patch.c
display_message_instead_of_starting_a_java_application_if_jam_is_disabled/: CF75_23.h  CF75_23.ld  CMakeLists.txt  CX70_56.h  CX70_56.ld  S65_58.h  S65_58.ld  patch.c
do_not_add_png_files_to_media_db/: CMakeLists.txt  E71_45.h  E71_45.ld  patch.S  patch.c
do_not_set_certain_resources_when_a_user_theme_is_applied/: CMakeLists.txt  E71_45.h  E71_45.ld  S75_52.h  S75_52.ld  patch.S  patch.c
drawhook/: alpha_draw.c  alpha_selector_ll.asm  build.sh  csm_exc.asm
eheap/: .gitignore  build.sh  eheap.dep  eheap.ewd  eheap.ewp  eheap.eww
enable_translucency_in_themes/: C81_51.h  C81_51.ld  CMakeLists.txt  E71_45.h  E71_45.ld  EL71_45.h  EL71_45.ld  S75_52.h  S75_52.ld  patch.S  patch.c
enable_transparent_in_themes/: CMakeLists.txt
extended_calls_list/: CMakeLists.txt  E71_45.h  E71_45.ld  patch.S  patch.c
fast_screensaver_appearance_after_keyboard_lock/: C72_22.h  C72_22.ld  C75_24.h  C75_24.ld  CMakeLists.txt  CX70_56.h  CX70_56.ld  E71_45.h  E71_45.ld  S65_58.h  S65_58.ld  S75_52.h  S75_52.ld  patch.S  patch.c
file_attributes_modification/: CMakeLists.txt  E71_45.h  E71_45.ld  patch.S  patch.c
fix_cursor_in_tile_view/: C72_22.h  C72_22.ld  C75_24.h  C75_24.ld  CMakeLists.txt  CX70_56.h  CX70_56.ld  S65_58.h  S65_58.ld  patch.S  patch.c
fix_init_of_scrollable_headers/: CMakeLists.txt  E71_45.h  E71_45.ld  S75_52.h  S75_52.ld  patch.S  patch.c
fix_items_bg_in_nm/: CMakeLists.txt  E71_45.h  E71_45.ld  S75_52.h  S75_52.ld  patch.S  patch.c
fix_navigation_in_tile_view/: C72_22.h  C72_22.ld  C75_24.h  C75_24.ld  CF75_23.h  CF75_23.ld  CMakeLists.txt  CX70_56.h  CX70_56.ld  S65_58.h  S65_58.ld  patch.S  patch.c
fix_network_icon/: C72_22.h  C72_22.ld  C75_24.h  C75_24.ld  CF75_23.h  CF75_23.ld  CMakeLists.txt  CX70_56.h  CX70_56.ld  E71_45.h  E71_45.ld  S65_58.h  S65_58.ld  patch.S  patch.c
fix_text_background_in_vibration_demo_ui/: CMakeLists.txt  S75_52.h  S75_52.ld  patch.S  patch.c
get_last_java_application_addon/: CMakeLists.txt  E71_45.h  E71_45.ld  data.h  jvm_app.h  patch.S  patch.c  rb.h
handle_disabled_mms_client_by_showing_a_message/: C72_22.h  C72_22.ld  C75_24.h  C75_24.ld  CF75_23.h  CF75_23.ld  CMakeLists.txt  CX70_56.h  CX70_56.ld  S65_58.h  S65_58.ld  patch.S  patch.c
hide_tab_bar/: CMakeLists.txt  E71_45.h  E71_45.ld  patch.S  patch.c
iconbar_modification/: CMakeLists.txt  E71_45.h  E71_45.ld  patch.S  patch.c
jvm_stop_and_clean_up_on_last_java_app_exit/: CMakeLists.txt  E71_45.h  E71_45.ld  jvm_heap.h  patch.S  patch.c
lazy_opwv_memory_management/: CMakeLists.txt  E71_45.h  E71_45.ld  data.h  opwv.h  patch.S  patch.c  rb.h
lock_or_unlock_keypad_by_double_press_of_hash_button/: CMakeLists.txt  E71_45.h  E71_45.ld  S75_52.h  S75_52.ld  patch.S  patch.c
media_player_modification/: CMakeLists.txt  E71_45.h  E71_45.ld  data.h  functions.h  header.S  header.c  id3v2.c  id3v2.h  menu.S  mp.h  mp_types.h  patch.S  patch.c  visualizer.S  visualizer.c
monitor89/: C72_22.h  C72_22.ld  C75_24.h  C75_24.ld  CF75_23.h  CF75_23.ld  CMakeLists.txt  CX70_56.h  CX70_56.ld  S65_58.h  S65_58.ld  cc_mon.h  patch.S  patch.c  toolchain.cmake
mp_locale_debug/: CMakeLists.txt  E71_45.h  E71_45.ld  meta.vkp  patch.S  patch.c  toolchain.cmake
native_explorer_modification/: CMakeLists.txt  E71_45.h  E71_45.ld  csm.h  fix_cmd.S  fix_cmd.c  functions.h  header.S  header.c  keyhook.S  keyhook.c  patch.S  patch.c  toolchain.cmake
native_explorer_modification/src/: 5461.S  5461.c  csm.h  fix_cmd.S  fix_cmd.c  functions.h  header.S  header.c  keyhook.S  keyhook.c  patch.S  patch.c  search.S  search.c  search_csm.h  types.h
offline_mode_in_red_button_menu/: CMakeLists.txt  E71_45.h  E71_45.ld  S75_52.h  S75_52.ld  patch.S  patch.c
open_disk_selection_menu_in_ce_by_hotkey/: C72_22.h  C72_22.ld  C75_24.h  C75_24.ld  CF75_23.h  CF75_23.ld  CMakeLists.txt  CX70_56.h  CX70_56.ld  S65_58.h  S65_58.ld  patch.S  patch.c  toolchain.cmake
optimize_theme_cache/: CMakeLists.txt  E71_45.h  E71_45.ld  patch.S  patch.c
speed_up_menu_scrolling/: CMakeLists.txt  E71_45.h  E71_45.ld  S75_52.h  S75_52.ld  patch.S  patch.c  patch.h
(+154 files in other folders)
